# TikaWe-muistiinpanojako

./: .gitignore  .pre-commit-config.yaml  init.sql  pyproject.toml  readme.md  setup.py  tasks.py
scripts/: performance_test.py  seed.py  seed_test.py  setup.py
scripts/sql/: init.sql  seed_test.sql
scripts/util/: generate_config.py  nimet.py  sanalista.py
src/: main.py
src/decorators/: csrf.py  flash_fields.py  login_required.py
src/injectors/: error_injector.py  field_injector.py
src/models/: comment.py  config.py  note.py  pagination.py  statistics.py  tag.py  user.py
src/routes/: auth.py  auth_route.py  comment_route.py  index_route.py  note_route.py  notes_route.py  search_route.py  user_route.py
src/services/: auth_service.py  comment_service.py  note_service.py  user_service.py
src/static/: preflight.css  style.css
src/templates/: base.html  error.html  index.html  search.html  signin.html  signup.html  user.html
src/templates/auth/: signin.html  signup.html
src/templates/notes/: create_note.html  edit_note.html  view_note.html
src/test/integration/: test_authentication.py  test_note.py
src/util/: config.py  database.py  error.py  error_processor.py  generate_pagination_buttons.py  logger.py
