[tool.poetry]
name = "tikawe-muistiinpanojako"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
invoke = "^2.2.0"
pre-commit = "^4.1.0"
selenium = "^4.29.0"
pytest-xdist = "^3.6.1"
pytest-random-order = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["ALL"]
include = ["src/**/*.py"]
target-version = "py312"
lint.ignore = [
    "I001",
    "D",
    "D203",
    "D212",
    "PTH123",
    "ANN201",
    "ANN202",
    "COM812",
    "TRY300",
    "PLR2004",
    "PT009",
]

[tool.pytest.ini_options]
addopts = "-ra -q -n 4 --random-order"
testpaths = ["src"]
