[tool.poetry]
name = "tikawe-muistiinpanojako"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["ALL"]
include = ["src/**/*.py"]
target-version = "py312"
lint.ignore = [
    "I001",
    "D100",
    "D104",
    "D212",
    "D202",
    "D205",
    "D413",
    "PTH123",
    "ANN201",
    "ANN202",
    "COM812",
    "TRY300",
    "PLR2004",
    "PT009",
    "S311"
]

[tool.ruff.lint.per-file-ignores]
"src/test/*" = ["D"]
"scripts/*" = ["D", "S310", "T201"]

